--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Zach Girouard</h1>
     <p>Computer Science</p>
+    <img src="https://fastly.picsum.photos/id/237/200/300.jpg?hmac=TmmQSbShHz9CdQm0NkEjx1Dyh_Y984R9LpNrpvH2D_U"/>
 </body>
 </html>
